<resources>
    <string name="app_name">Simple Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="multiple_layouts">Multiple Layouts</string>
    <string name="press_menu_to_change_to_a_layout_example">Press Menu to Change to a Layout Example</string>
    <string name="green_rect">green rect</string>
    <string name="red_oval">red oval</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="call_me">Call Me!</string>
    <string name="northeast">NorthEast</string>
    <string name="north">North</string>
    <string name="northwest">NorthWest</string>
    <string name="west">West</string>
    <string name="center">Center</string>
    <string name="east">East</string>
    <string name="south">South</string>
    <string name="southeast">SouthEast</string>
    <string name="southwest">SouthWest</string>
    <string name="arrow">arrow</string>
    <string name="arrow2">arrow2</string>
    <string name="one_number">1</string>
    <string name="two_number">2</string>
    <string name="three_number">3</string>
    <string name="four_number">4</string>
    <string name="five_number">5</string>
    <string name="six_number">6</string>
    <string name="seven_number">7</string>
    <string name="eight_number">8</string>
    <string name="nine_number">9</string>
    <string name="zero_number">0</string>
</resources>
