<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="*">

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/Button01"
            style="?android:button"
            android:text="@string/one_number" />

        <Button
            android:id="@+id/Button02"
            style="?android:button"
            android:text="@string/two_number" />

        <Button
            android:id="@+id/Button03"
            style="?android:button"
            android:text="@string/three_number" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Button04"
            style="?android:button"
            android:text="@string/four_number" />

        <Button
            android:id="@+id/Button05"
            style="?android:button"
            android:text="@string/five_number" />

        <Button
            android:id="@+id/Button06"
            style="?android:button"
            android:text="@string/six_number" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Button07"
            style="?android:button"
            android:text="@string/seven_number" />

        <Button
            android:id="@+id/Button08"
            style="?android:button"
            android:text="@string/eight_number" />

        <Button
            android:id="@+id/Button09"
            style="?android:button"
            android:text="@string/nine_number" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Button00"
            style="?android:button"
            android:layout_column="1"
            android:text="@string/zero_number" />
    </TableRow>
</TableLayout>