<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignMargins"
    android:columnCount="4"
    android:columnOrderPreserved="true"
    android:rowCount="4"
    android:rowOrderPreserved="true">

    <TextView
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:background="#f44336"
        android:gravity="center"
        android:text="@string/one" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_rowSpan="2"
        android:background="#ff9800"
        android:gravity="center"
        android:text="@string/two" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:background="#8bc34a"
        android:gravity="center"
        android:text="@string/three" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:background="#673ab7"
        android:gravity="center"
        android:text="@string/four" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="350dp"
        android:layout_column="3"
        android:layout_columnSpan="1"
        android:layout_row="0"
        android:layout_rowSpan="4"
        android:background="#03a9f4"
        android:gravity="center"
        android:text="@string/five" />
</GridLayout>