<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity=""
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".1"
        android:contentDescription="@string/arrow"
        android:src="@drawable/arrow" />

    <ImageView
        android:id="@+id/ImageView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight=".1"
        android:contentDescription="@string/red_oval"
        android:minHeight="300dp"
        android:minWidth="30dp"
        android:src="@drawable/red_oval" />

    <ImageView
        android:id="@+id/ImageView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight=".1"
        android:contentDescription="@string/arrow2"
        android:src="@drawable/arrow2" />

    <ImageView
        android:id="@+id/ImageView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight=".1"
        android:contentDescription="@string/green_rect"
        android:minHeight="300dp"
        android:minWidth="30dp"
        android:src="@drawable/green_rect" />

    <ImageView
        android:id="@+id/ImageView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight=".2"
        android:contentDescription="@string/arrow"
        android:src="@drawable/arrow" />

    <ImageView
        android:id="@+id/ImageView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight=".1"
        android:contentDescription="@string/red_oval"
        android:minHeight="300dp"
        android:minWidth="30dp"
        android:src="@drawable/red_oval" />

    <ImageView
        android:id="@+id/ImageView07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:contentDescription="@string/arrow2"
        android:src="@drawable/arrow2" />

    <ImageView
        android:id="@+id/ImageView08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight=".1"
        android:contentDescription="@string/green_rect"
        android:minHeight="300dp"
        android:minWidth="30dp"
        android:src="@drawable/green_rect" />

    <ImageView
        android:id="@+id/ImageView09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight=".1"
        android:contentDescription="@string/arrow"
        android:src="@drawable/arrow" />
</LinearLayout>